--- a/views/index.html
+++ b/views/index.html
@@ -35,16 +35,16 @@
       <div id="albums">
 
           <!-- one album -->
-          <div class="row album">
+      <!--     <div class="row album">
 
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-default">
-                <div class="panel-body">
+                <div class="panel-body"> -->
 
                 <!-- begin album internal row -->
-                  <div class='row'>
+             <!--      <div class='row'>
                     <div class="col-md-3 col-xs-12 thumbnail album-art">
-                      <img src="/images/800x800.png" alt="album image">
+                      <img src="../public/images/800x800.png" alt="album image">
                     </div>
 
                     <div class="col-md-9 col-xs-12">
@@ -64,7 +64,7 @@
                           <span class='album-releaseDate'>2008, November 18</span>
                         </li>
                       </ul>
-                    </div>
+                    </div> -->
 
                   </div>
                   <!-- end of album internal row -->
